K 5691	add Message.getSession() method
K 5692	MimeBodyPart.attachFile should set the disposition to ATTACHMENT
K 5693	add MimeMessage.reply(replyToAll, setAnswered) method
K 5694	add "next" methods to HeaderTokenizer to help parsing bad headers
K 5743	add @MailSessionDefinition and @MailSessionDefinitions for Java EE 7
K 5769	make cachedContent field protected in MimeMessage and MimeBodyPart


		  CHANGES IN THE 1.4.6 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.6 release.

K  4906	IMAP Store socket leak on connect with ProtocolException
K  5086	STARTTLS when already using SSL may cause connection to fail
K  5090	Yahoo: Error reading emails containing "undisclosed recipients"
K  5233	Infinite loop if Quota information is not correctly reported by server
<no id>	add mail.imap.ignorebodystructuresize to work around server bugs
<no id>	add "gimap" EXPERIMENTAL Gmail IMAP provider
<no id>	add isSSL() method to all protocol providers
<no id>	add support for debug output using java.util.logging
<no id>	avoid NullPointerException when encountering a bad Content-Type


		  CHANGES IN THE 1.4.5 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.5 release.

7021190	MimeMessage.setRecipients(type, String) does not accept null address
K  3815	ArrayIndexOutOfBoundsException for some IMAP protocol errors
K  4002	MultipartReport.setReport and setDeliveryStatus are broken
K  4065	Wrong representation of CR/LF are appended to the attachment
K  4296	SSL Re-Negotiation Problem with checkserveridentity=true
K  4511	Thread safety in javax.mail.PasswordAuthentication
K  4583	Add SOCKS5 support
K  4753	wrong message accessed when another client expunges and adds messages
<no id>	properly handle timeouts during SSL negotiation
<no id>	free MIME headers in IMAPMessage.invalidateHeaders
<no id>	fix exception in POP3Message when reading file cached content twice